syntax = "proto3";

package pb;

service CommentSVC {
    rpc GetCommentByID (RequestWithID) returns (ResponseComment) {}
    rpc PostComment (Comment) returns (ResponseComment) {}
    rpc DeleteCommentByID (RequestWithID) returns (ResponseWithBool) {}
    rpc GetCommentsByAuthorID (RequestWithID) returns (ResponseCommentsByAuthorID) {}
}

message Comment {
    uint32 id = 1;
    string text = 2;
    uint32 author_id = 3;
}

message ResponseWithBool {
    bool ok = 1;
    string err = 2;
}

message ResponseComment {
    Comment data = 1;
    string err = 2;
}

message ResponseCommentsByAuthorID {
    repeated Comment comments = 1;
    string err = 2;
}

message RequestWithID {
    uint32 id = 1;
}